--- a/src/GithubPoc/Properties/launchSettings.json
+++ b/src/GithubPoc/Properties/launchSettings.json
@@ -8,7 +8,7 @@
     }
   },
   "profiles": {
-    "GithubSandbox": {
+    "GithubPoc": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
