--- a/src/GithubPocUnitTests/GithubPocUnitTests.csproj
+++ b/src/GithubPocUnitTests/GithubPocUnitTests.csproj
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\GithubSandbox\GithubSandbox.csproj" />
+    <ProjectReference Include="..\GithubPoc\GithubPoc.csproj" />
   </ItemGroup>
 
 </Project>
