--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -20,10 +20,6 @@ jobs:
       uses: actions/setup-dotnet@v2
       with:
         dotnet-version: 6.0.*
-    - name: debug
-      run: ls ./src
-    - name: debug2
-      run: printenv
     - name: Restore dependencies
       run: dotnet restore ./src/GithubPoc
     - name: Build
@@ -39,4 +35,14 @@ jobs:
     steps:
     - name: Test
       run: dotnet test ./src/GithubPoc/GithubPocUnitTests.csproj --no-build --verbosity normal
+      
+  debug:
+    needs: test
+    runs-on: ubuntu-latest
+    if: ${{ failure() }}
+    steps:
+    - name: debug
+      run: ls ./src
+    - name: debug2
+      run: printenv
     
