--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -33,9 +33,8 @@ jobs:
       matrix:
         os: [ubuntu-latest, windows-latest]
     steps:
-    - run: cd ${{ github.workspace }}
-    - name: Test
-      run: dotnet test --no-build --verbosity normal
+    - name: Test on ${{ matrix.os }}
+      run: dotnet test "${{ github.workspace }}/src/GithubPocUnitTests" --no-build --verbosity normal
       
   debug:
     needs: test
