--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -24,6 +24,10 @@ jobs:
       run: dotnet restore ./src/GithubPoc
     - name: Build
       run: dotnet build ./src/GithubPoc --no-restore
+    - uses: actions/cache@v3.0.2
+      with:
+        path: "${{ github.workspace }}"
+        key: src
       
   test:
     name: Test on ${{ matrix.os }}
