--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -24,10 +24,12 @@ jobs:
       run: dotnet restore ./src/GithubPoc
     - name: Build
       run: dotnet build ./src/GithubPoc --no-restore
-    - uses: actions/cache@v3.0.2
+    - uses: actions/upload-artifact@v3
       with:
-        path: "${{ github.workspace }}"
-        key: src
+        name: src
+        path: "${{ github.workspace }}/src"
+        if-no-files-found: error
+        retention-days: 1
       
   test:
     name: Test on ${{ matrix.os }}
@@ -37,7 +39,11 @@ jobs:
       matrix:
         os: [ubuntu-latest, windows-latest]
     steps:
-    - run: cd "${{ github.workspace }}/src/GithubPocUnitTests"
+    - uses: actions/download-artifact@v3
+      with:
+        name: src
+        path: "${{ github.workspace }}"
+    - run: cd "GithubPocUnitTests"
     - name: Test on ${{ matrix.os }}
       run: dotnet test --no-build --verbosity normal
       
