--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -43,7 +43,7 @@ jobs:
       with:
         name: src
         path: "${{ github.workspace }}"
-    - run: cd "GithubPocUnitTests"
+    - run: cd "${{ github.workspace }}/src/GithubPocUnitTests"
     - name: Test on ${{ matrix.os }}
       run: dotnet test --no-build --verbosity normal
       
@@ -52,6 +52,10 @@ jobs:
     runs-on: ubuntu-latest
     if: ${{ failure() }}
     steps:
+    - uses: actions/download-artifact@v3
+      with:
+        name: src
+        path: "${{ github.workspace }}"
     - run: cd "${{ github.workspace }}"
     - run: ls
     - run: cd "${{ github.workspace }}/src"
